bpo-36594: Fix incorrect use of %p in format strings

In addition, fix some other minor violations of C99.